<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroungTrangChu"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/group_tab_radio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_moinhat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:checked="true"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:text="@string/moinhat"
                android:textAlignment="center"
                android:textColor="@drawable/changetext_tab_trangchu" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroungTrangChu" />

            <RadioButton
                android:id="@+id/rd_danhmuc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:text="@string/danhmuc"
                android:textAlignment="center"
                android:textColor="@drawable/changetext_tab_trangchu" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroungTrangChu" />

            <RadioButton
                android:id="@+id/rd_khuvuc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:text="@string/khuvuc"
                android:textAlignment="center"
                android:textColor="@drawable/changetext_tab_trangchu" />

        </RadioGroup>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestScrollViewODau"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/nearby"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/gantoi"
                        android:textAllCaps="false"

                        />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/blog"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/blogs"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/order"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/giaohang"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/gameandfun"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/gameandfun"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/review"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/danhgia"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/topmember"
                        android:textAllCaps="false" />

                </LinearLayout>


                <ProgressBar
                    android:id="@+id/progressBarODau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerOdau"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>



            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
